[package]
name = "thumbsdb"
version = "0.1.3"
authors = [
    "Thomas BAILLEUX <thomas@bailleux.me>",
    "Berkus Decker <berkus+crates@madfire.net>",
]
license = "WTFPL"
description = "Forensic library: parser and reader for Microsoft Thumbs.db file"
homepage = "https://github.com/zadlg/thumbsdb"
keywords = ["thumbs", "thumbnail", "thumbsdb"]
categories = ["parser-implementations", "parsing"]
repository = "https://github.com/berkus/thumbsdb.git"
readme = "README.md"
edition = "2021"

[dependencies]
ole = "0.1.14"
thiserror = "1.0.64"
